--- a/COP4813Project/nbproject/private/private.properties
+++ b/COP4813Project/nbproject/private/private.properties
@@ -1,4 +1,4 @@
-deploy.ant.properties.file=C:\\Users\\Trey\\AppData\\Roaming\\NetBeans\\8.0.1\\tomcat60.properties
+deploy.ant.properties.file=C:\\Users\\Heather\\AppData\\Roaming\\NetBeans\\8.0\\tomcat60.properties
 j2ee.server.home=C:/tomcat
 j2ee.server.instance=tomcat60:home=C:\\tomcat
-user.properties.file=C:\\Users\\Trey\\AppData\\Roaming\\NetBeans\\8.0.1\\build.properties
+user.properties.file=C:\\Users\\Heather\\AppData\\Roaming\\NetBeans\\8.0\\build.properties
